Addeed communication between the three microservices using the domains without service discovery, where the physicists-catalogue-service receives a physicist id, it will call the microservice physicists-data-service to retrieve all the information about the physicist including all the prizes he won, and it will call the third microservice prize-info-service to retrieve the information about that prize and consolidate all of the information in one data and send it as a response which I named it PhysicistProfile